# poetry_project

./: .gitignore  README.md
poetry_project/: README.md  pyproject.toml
poetry_project/src/poetry_project/: chat.py  main.py
src/: main.py
