[project]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = [
    {name = "swhh",email = "seamus.holland1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "elevenlabs (>=2.1.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "google-genai (>=1.18.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "poetry_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
